Revert to java8
We still need to support j8 and trying to produce a jar for j8 and j12
is too much hassle for no benefit.